--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <input class="display">
         <button  onclick="limparTela()"  class="gray-button">AC</button>
         <button  onclick=" inverte()"   class="gray-button">+/-</button>
-        <button   onclick="addCaracter('/')" class="pink-button">/</button>
-        <button  onclick="addCaracter('*')"  class="pink-button">*</button>
+        <button   onclick="addCaracter('÷')" class="pink-button">÷</button>
+        <button   onclick="addCaracter('x')"  class="pink-button">X</button>
         <button  onclick="addCaracter('7')"  class="black-button">7</button>
         <button  onclick="addCaracter('8')" class="black-button">8</button>
         <button  onclick="addCaracter('9')" class="black-button">9</button>
@@ -27,6 +27,7 @@
         <button  onclick="calcular()"  class="pink-button">=</button>
         <button  onclick="addCaracter('0')"    class="black-button">0</button>
         <button  onclick="addCaracter('.')"  class="black-button">.</button>
+        <button onclick="apagarUltimo()">←</button>
     </div>
 </body>
 <script src="./index.js"></script>
